<?xml version="1.0"?>
<package>
    <name>mileage_publisher</name>
    <version>1.10.0</version>
    <description>The waypoint_follower package</description>
    <maintainer email="h_ohta@ertl.jp">h_ohta</maintainer>
    <license>Apache 2</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>autoware_build_flags</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>autoware_msgs</build_depend>
    <build_depend>autoware_config_msgs</build_depend>
    <build_depend>autoware_can_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roslib</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>autoware_msgs</run_depend>
    <run_depend>autoware_config_msgs</run_depend>
    <run_depend>autoware_can_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roslib</run_depend>

    <export>
    </export>
</package>
